WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88679
[Qt][WK2] API tests randomly asserts in QQuickWebPage::setContentsScale(qreal)
https://bugs.webkit.org/show_bug.cgi?id=88679
Summary
[Qt][WK2] API tests randomly asserts in QQuickWebPage::setContentsScale(qreal)
Viatcheslav Ostapenko
Reported
2012-06-08 12:17:33 PDT
ASSERTION FAILED: scale > 0 /home/sl/work/melt/webkit_merge/Source/WebKit2/UIProcess/API/qt/qquickwebpage.cpp(132) : void QQuickWebPage::setContentsScale(qreal) 1 0xb7250075 /usr/lib/libWebKit2.so.1(_ZN13QQuickWebPage16setContentsScaleEd+0x67) [0xb7250075] 2 0xb735699c /usr/lib/libWebKit2.so.1(_ZN6WebKit27QtViewportInteractionEngine11setCSSScaleEd+0x90) [0xb735699c] 3 0xb72587e4 /usr/lib/libWebKit2.so.1(_ZN29QQuickWebViewFlickablePrivate21didChangeContentsSizeERK5QSize+0x246) [0xb72587e4] 4 0xb734db01 /usr/lib/libWebKit2.so.1(_ZN6WebKit12QtPageClient21didChangeContentsSizeERKN7WebCore7IntSizeE+0x4f) [0xb734db01] 5 0xb72f373a /usr/lib/libWebKit2.so.1(_ZN6WebKit12WebPageProxy21didChangeContentsSizeERKN7WebCore7IntSizeE+0x26) [0xb72f373a] 6 0xb746a6e7 /usr/lib/libWebKit2.so.1(_ZN7CoreIPC18callMemberFunctionIN6WebKit12WebPageProxyEMS2_FvRKN7WebCore7IntSizeEES4_EEvRKNS_10Arguments1IT1_EEPT_T0_+0x40) [0xb746a6e7] 7 0xb7465d3f /usr/lib/libWebKit2.so.1(_ZN7CoreIPC13handleMessageIN8Messages12WebPageProxy21DidChangeContentsSizeEN6WebKit12WebPageProxyEMS5_FvRKN7WebCore7IntSizeEEEEvPNS_15ArgumentDecoderEPT0_T1_+0x5b) [0xb7465d3f] 8 0xb7462bea /usr/lib/libWebKit2.so.1(_ZN6WebKit12WebPageProxy29didReceiveWebPageProxyMessageEPN7CoreIPC10ConnectionENS1_9MessageIDEPNS1_15ArgumentDecoderE+0x9ca) [0xb7462bea] 9 0xb72edeca /usr/lib/libWebKit2.so.1(_ZN6WebKit12WebPageProxy17didReceiveMessageEPN7CoreIPC10ConnectionENS1_9MessageIDEPNS1_15ArgumentDecoderE+0x10e) [0xb72edeca] 10 0xb732ad85 /usr/lib/libWebKit2.so.1(_ZN6WebKit15WebProcessProxy17didReceiveMessageEPN7CoreIPC10ConnectionENS1_9MessageIDEPNS1_15ArgumentDecoderE+0x1c7) [0xb732ad85] 11 0xb729deea /usr/lib/libWebKit2.so.1(_ZN6WebKit25WebConnectionToWebProcess17didReceiveMessageEPN7CoreIPC10ConnectionENS1_9MessageIDEPNS1_15ArgumentDecoderE+0x122) [0xb729deea] 12 0xb71df5d2 /usr/lib/libWebKit2.so.1(_ZN7CoreIPC10Connection15dispatchMessageERNS0_7MessageINS_15ArgumentDecoderEEE+0x170) [0xb71df5d2] 13 0xb71df799 /usr/lib/libWebKit2.so.1(_ZN7CoreIPC10Connection18dispatchOneMessageEv+0xa3) [0xb71df799] 14 0xb71e9e38 /usr/lib/libWebKit2.so.1(_ZN3WTF15FunctionWrapperIMN7CoreIPC10ConnectionEFvvEEclEPS2_+0x44) [0xb71e9e38] 15 0xb71e9bf2 /usr/lib/libWebKit2.so.1(_ZN3WTF17BoundFunctionImplINS_15FunctionWrapperIMN7CoreIPC10ConnectionEFvvEEEFvPS3_EEclEv+0x34) [0xb71e9bf2] 16 0xb72d32b2 /usr/lib/libWebKit2.so.1(_ZNK3WTF8FunctionIFvvEEclEv+0x7e) [0xb72d32b2] 17 0xb4bbbb6e /usr/lib/libWebCore.so.1(_ZN7WebCore7RunLoop11performWorkEv+0x7a) [0xb4bbbb6e] 18 0xb4ebacc5 /usr/lib/libWebCore.so.1(_ZN7WebCore7RunLoop11TimerObject11performWorkEv+0x1f) [0xb4ebacc5] 19 0xb4ebb86a /usr/lib/libWebCore.so.1(+0x242b86a) [0xb4ebb86a] 20 0xae5ccc63 /usr/lib/libQtCore.so.5(_ZN14QMetaCallEvent13placeMetaCallEP7QObject+0x93) [0xae5ccc63] 21 0xae5cf502 /usr/lib/libQtCore.so.5(_ZN7QObject5eventEP6QEvent+0x252) [0xae5cf502] 22 0xaf245b2e /usr/lib/libQtWidgets.so.5(_ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent+0xce) [0xaf245b2e] 23 0xaf249801 /usr/lib/libQtWidgets.so.5(_ZN12QApplication6notifyEP7QObjectP6QEvent+0x231) [0xaf249801] 24 0xae59ef8e /usr/lib/libQtCore.so.5(_ZN16QCoreApplication14notifyInternalEP7QObjectP6QEvent+0x8e) [0xae59ef8e] 25 0xae5a37c5 /usr/lib/libQtCore.so.5(_ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData+0x2b5) [0xae5a37c5] 26 0xae5a3ced /usr/lib/libQtCore.so.5(_ZN16QCoreApplication16sendPostedEventsEP7QObjecti+0x2d) [0xae5a3ced] 27 0xae5f68c5 /usr/lib/libQtCore.so.5(+0x2798c5) [0xae5f68c5] 28 0xb0322738 /usr/lib/libglib-2.0.so.0(g_main_context_dispatch+0x1c8) [0xb0322738] 29 0xb0322ee8 /usr/lib/libglib-2.0.so.0(+0x42ee8) [0xb0322ee8] 30 0xb03230e4 /usr/lib/libglib-2.0.so.0(g_main_context_iteration+0x64) [0xb03230e4] 31 0xae5f6a60 /usr/lib/libQtCore.so.5(_ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE+0x70) [0xae5f6a60]
Attachments
Patch
(1.59 KB, patch)
2012-06-08 12:26 PDT
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
Rebased patch.
(1.63 KB, patch)
2012-06-08 16:16 PDT
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Viatcheslav Ostapenko
Comment 1
2012-06-08 12:26:36 PDT
Created
attachment 146629
[details]
Patch
Viatcheslav Ostapenko
Comment 2
2012-06-08 16:16:53 PDT
Created
attachment 146660
[details]
Rebased patch.
Csaba Osztrogonác
Comment 3
2012-07-03 08:15:34 PDT
Comment on
attachment 146660
[details]
Rebased patch. LGTM, rs=me.
WebKit Review Bot
Comment 4
2012-07-03 08:35:11 PDT
Comment on
attachment 146660
[details]
Rebased patch. Clearing flags on attachment: 146660 Committed
r121769
: <
http://trac.webkit.org/changeset/121769
>
WebKit Review Bot
Comment 5
2012-07-03 08:35:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug