[Qt][WK2] API tests randomly asserts in QQuickWebPage::setContentsScale(qreal) https://bugs.webkit.org/show_bug.cgi?id=88679

Reviewed by Csaba Osztrogonác.

Viewport parameters cannot be calculated while viewport is not visible and
viewport size is 0, so let's delay calculation of viewport parameters until view
becomes visible.

* UIProcess/qt/QtViewportHandler.cpp:
(WebKit::QtViewportHandler::pageContentsSizeChanged):


Canonical link: https://commits.webkit.org/108329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121769 268f45cc-cd09-0410-ab3c-d52691b4dbfc